--- a/Projeto 01/styles.css
+++ b/Projeto 01/styles.css
@@ -1,7 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+
 body {
   transition: 0.3s;
   margin: 0;
   padding: 0;
+  background-color: rgb(241, 239, 239);
+  font-family: 'Poppins', 'sans-serif';
+  color: rgb(57, 57, 57);
+}
+
+h1 {
+  font-size: 70px;
+  line-height: 70px;
+  font-weight: 300;
+  margin: 10px 0;
+}
+
+h2 {
+  font-size: 40px;
+  line-height: 40px;
+  font-weight: 300;
+  margin: 10px 0;
+}
+
+p {
+  margin: 0px;
+  font-size: 20px;
+}
+
+a {
+  color: rgb(162, 0, 255);
+  font-size: 20px;
+  text-decoration: none;
+  font-weight: 100;
+}
+
+.dark a {
+  color: rgb(246, 169, 241);
+}
+
+
+.square h2{
+  margin: 50px 0 10px 0;
 }
 
 header{
@@ -61,4 +101,29 @@ header{
 
 .main-text {
   width: 50%;
+}
+
+.square {
+  width: 98%;
+  margin: 1%;
+  height: 350px;
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+}
+
+.dark .square {
+  background-color: rgb(71, 71, 71);
+}
+
+.sub-section {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media only screen and (min-width: 970px) {
+  .square {
+    width: 48%;
+    margin: 1%;
+    height: 600px;
+  }
 }
